medicines/doc-index-updater/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doc-index-updater
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doc-index-updater
  template:
    metadata:
      labels:
        app: doc-index-updater
    spec:
      containers:
        - name: doc-index-updater
          image: mhra/doc-index-updater
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 10m
              memory: 100Mi
