medicines/doc-index-updater/manifests/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-redis
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
    - name: redis
      trafficPolicy:
        loadBalancer:
          simple: ROUND_ROBIN
        portLevelSettings:
          - port:
              number: 6380
            tls:
              mode: SIMPLE
