medicines/doc-index-updater/manifests/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: redis
spec:
  hosts:
    - doc-index-updater-dev.redis.cache.windows.net
  ports:
    - number: 6379
      name: tcp
      protocol: TCP
    - number: 6380
      name: tls
      protocol: TLS
  resolution: DNS
