medicines/doc-index-updater/manifests/virtual-service-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-redis-through-egress-gateway
spec:
  hosts:
    - doc-index-updater-dev.redis.cache.windows.net
  http:
    - match:
        - port: 6379
      route:
        - destination:
            host: istio-egressgateway.istio-system.svc.cluster.local
            subset: redis
            port:
              number: 6380
