medicines/doc-index-updater/manifests/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo
spec:
  hosts:
    - doc-index-updater.localhost
  gateways:
    - ingressgateway.istio-system.svc.cluster.local
  http:
    - route:
        - destination:
            port:
              number: 80
            host: doc-index-updater
